﻿2018-01-23 - version 0.7.0
[+] Added feature: Window method to set and read visible buttons in title bar
[+] Added feature: Window manual resizing and moving can be disabled
[*] Fix TableView scrollbars: both scrollbars did not response mouse clicks
    if the last row or column were visible
[*] Fix crash after clicking the first TableView column that shows row numbers

2018-01-13 - version 0.6.4
[*] Add a workaround for 'false' key presses fired after clicking mouse on OSX

2018-01-02 - version 0.6.3
[+] Add a new boolean property for EditField - PasswordMode. If PasswordMode is
    true then the editfield text is hidden with 'stars'.
    Please see demo demos/editfield for details
[+] Change a theme for object 'Edit' - added non-obligatory forth character
   that is used as replacement for any character inside EditField when Password
   mode is on. By default it is '*' in all included themes. Old themes that
   miss forth character use '*' as well.

2017-12-01 - version 0.6.2
[*] Fix selecting the next control with TAB key

2017-11-28 - version 0.6.2
[*] Fix races (that racy tool shows). The work is not completed but all demos
    and termfb2 application works without warnings

2017-09-07 - version 0.6.2
[*] Setting the first button of confirmation dialog as default one did not work
[*] TableView does not use 'go' to fire events that allows to create on the
    fly any required dialog. That is useful, e.g., to create a simple
    confirmation dialog to a user to approve a row deletion

2017-07-04 - Version 0.6.1
[*] Fix selection Window with mouse: clicking non-active Window makes the
    Window active (unless the top Window is modal one)
[*] TableView does not fire OnSelectionChange event if a user clicked outside
    the table. Before the fix a callback got selected index greater than
    the total number of rows and might crash a callback
[+] Add a new feature to Windows: to keep all changes the Windows can be